--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
+    <title>hw-11</title>
     <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/89f5762326.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <div class="search-toolbar">
+    <form class="search-form" id="search-form">
+        <input class="search-form-input" type="text" name="searchQuery" autocomplete="off"
+            placeholder="Search images..." />
+        <button class="search-form-button" type="submit"><i class="fa fa-search"></i></button>
+    </form>
+</div>
+    </form>
+    <div class="gallery"></div>
+    <button type="button" class="load-more">Load more</button>
+    <script
+      type="module"
+      class="search-form-button"
+      src="./js/index.js"
+    ></script>
   </body>
 </html>
